--- a/part-1/index.html
+++ b/part-1/index.html
@@ -20,6 +20,7 @@
 
 <!-- add script tags for your components here -->
 <script src="firstcomponent.js" type="text/babel"></script>
+<script src="namedcomponent.js" type="text/babel"></script>
 <script src="app.js" type="text/babel"></script>
 <script src="index.js" type="text/babel"></script>
 
