--- a/part-2/index.html
+++ b/part-2/index.html
@@ -9,15 +9,17 @@
 <div id="root"> <!-- component will go in this div --> </div>
 
 <script src=
-  "https://unpkg.com/react/umd/react.development.js"></script>
+  "https://unpkg.com/react@18/umd/react.development.js"></script>
 <script src=
-  "https://unpkg.com/react-dom/umd/react-dom.development.js">
+  "https://unpkg.com/react-dom@18/umd/react-dom.development.js">
 </script>
 
-<script src="https://unpkg.com/babel-standalone"></script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
 <!-- add script tags for your components here -->
-<script src="index.js" type="text/jsx"></script>
+<script src="tweet.js" type="text/babel"></script>
+<script src="app.js" type="text/babel"></script>
+<script src="index.js" type="text/babel"></script>
 
 </body>
 </html>
